--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -129,7 +129,7 @@ WindowStartupLocation="CenterScreen"
             <!-- Data Table -->
             <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView ItemsSource="{Binding VungTrongList}" 
+                    <ListView ItemsSource="{Binding VungTrongList}" x:Name="ListViewControll"
                           SelectedItem="{Binding SelectedVungTrong, Mode=OneWayToSource}" 
                           HorizontalAlignment="Stretch" 
                           VerticalAlignment="Stretch">
@@ -140,14 +140,14 @@ WindowStartupLocation="CenterScreen"
                                     <GridViewColumn.HeaderTemplate>
                                         <DataTemplate>
                                             <Border Background="MediumSeaGreen" Padding="5" CornerRadius="10,10,0,0">
-                                                <TextBlock Text="Mã vùng trồng" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
+                                                <TextBlock Text="ID" Foreground="White" FontWeight="Bold" TextAlignment="Center" Width="100"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.HeaderTemplate>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Border Background="White" Padding="5">
-                                                <TextBlock Text="{Binding MaVungTrong}" TextAlignment="Center" Foreground="Black" Width="170"/>
+                                                <TextBlock Text="{Binding ID}" TextAlignment="Center" Foreground="Black" Width="170"/>
                                             </Border>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
