--- a/View/signup.xaml
+++ b/View/signup.xaml
@@ -91,16 +91,11 @@ Style="{StaticResource MaterialDesignRaisedAccentButton}"
 ToolTip="Resource name: MaterialDesignRaisedAccentButton"
 materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,304,54,0" 
 Content="Đăng Nhập" FontSize="12" Foreground="DarkOliveGreen"
+                    Command="{Binding LoginCommand}"
+                    CommandParameter="{Binding ElementName=Signup}"
 Background="Transparent"
 BorderBrush="Transparent"
-Padding="0" Height="17" VerticalAlignment="Top" HorizontalAlignment="Right" Width="63">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Loaded">
-                            <i:InvokeCommandAction Command="{Binding LoginCommand}" 
-                             CommandParameter="{Binding ElementName=Signup}"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </Button>
+Padding="0" Height="17" VerticalAlignment="Top" HorizontalAlignment="Right" Width="63"/>
             </Grid>
         </Border>
 
