--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -66,18 +66,11 @@
                     
                     materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,0,43,26" 
                     Content="Đăng kí" FontSize="12" Foreground="DarkOliveGreen"
+                    Command="{Binding SignUpCommand}"
+                    CommandParameter="{Binding ElementName=loginWindow}"
                     Background="Transparent"
                     BorderBrush="Transparent"
-                    Command="{Binding SignUpCommand}" 
-                    CommandParameter="{Binding ElementName=Signup}"
-                    Padding="0" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="59">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Loaded">
-                            <i:InvokeCommandAction Command="{Binding SignupCommand}" 
-                             CommandParameter="{Binding ElementName=loginWindow}"/>
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </Button>
+                    Padding="0" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="59"/>
             </Grid>
         </Border>
     </Grid>
