--- a/View/CoSoThuocBVTV.xaml
+++ b/View/CoSoThuocBVTV.xaml
@@ -47,45 +47,69 @@ WindowStartupLocation="CenterScreen"
                     <!-- Input Fields -->
                     <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" Margin="10">
                         <!--  Tên -->
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                             <TextBox Text="{Binding Ten}" 
-                      Width="40" 
-                      materialDesign:HintAssist.Hint="Tên" 
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                            <materialDesign:PackIcon Kind="Store" 
-                      VerticalAlignment="Center" 
-                       Margin="-50,10,0,0" 
-                       Foreground="Blue" 
-                       HorizontalAlignment="Right" Width="80"/>
+                               Width="40" 
+                               materialDesign:HintAssist.Hint="Tên" 
+                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                              <materialDesign:PackIcon Kind="Store" 
+                                VerticalAlignment="Center" 
+                                Margin="-50,10,0,0" 
+                                Foreground="Blue" 
+                                HorizontalAlignment="Right" Width="80"/>        
 
                         </StackPanel>
 
                         <!-- Địa chỉ -->
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
-                            <TextBox Text="{Binding DiaChi }" 
-                      Width="50" 
-                      materialDesign:HintAssist.Hint="Địa chỉ" 
-                      Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                            <materialDesign:PackIcon Kind="Location" 
-                          VerticalAlignment="Center" 
-                          Margin="-40,10,0,0" 
-                          Foreground="Orange" 
-                          HorizontalAlignment="Right"
-                          Width="80"                           />
-
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" >
+                                <TextBox Text="{Binding DiaChi }" 
+                                   Width="50" 
+                                   materialDesign:HintAssist.Hint="Địa chỉ" 
+                                   Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                                <materialDesign:PackIcon Kind="Location" 
+                                       VerticalAlignment="Center" 
+                                       Margin="-40,10,0,0" 
+                                       Foreground="Orange" 
+                                       HorizontalAlignment="Right"
+                                       Width="70" />  
                         </StackPanel>
-                        <!-- Ngày cấp -->
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="5">
-                            <TextBox Text="{Binding NgayCap}" 
-                  Width="70" 
-                  materialDesign:HintAssist.Hint="Ngày cấp" 
-                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                            <materialDesign:PackIcon Kind="Calendar" 
-                  VerticalAlignment="Center" 
-                  Margin="-20,10,0,0" 
-                  Foreground="IndianRed" 
-                  HorizontalAlignment="Right"/>
 
+                        <!-- Ngày cấp -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                    <TextBox Text="{Binding NgayCapGiayPhep, StringFormat=dd/MM/yyyy}" 
+                                       Width="70" 
+                                       materialDesign:HintAssist.Hint="Ngày cấp" 
+                                       Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Calendar" 
+                                       VerticalAlignment="Center" 
+                                       Margin="-30,10,0,0" 
+                                       Foreground="IndianRed" 
+                                       HorizontalAlignment="Right" Width="50"/>     
+                        </StackPanel>
+                        <!-- Loại cơ sở -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <TextBox Text="{Binding LoaiCoSo }" 
+                              Width="70" 
+                              materialDesign:HintAssist.Hint="Loại cơ sở" 
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Category" 
+                                  VerticalAlignment="Center" 
+                                  Margin="-40,10,0,0" 
+                                  Foreground="DeepSkyBlue" 
+                                  HorizontalAlignment="Right" Width="70"/>      
+                        </StackPanel>
+                        <!-- Mã HC -->
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <TextBox Text="{Binding MaHC }" 
+                              Width="50" 
+                              materialDesign:HintAssist.Hint="Mã HC" 
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                            <materialDesign:PackIcon Kind="Location" 
+                                  VerticalAlignment="Center" 
+                                  Margin="-40,10,0,0" 
+                                  Foreground="Orange" 
+                                  HorizontalAlignment="Right"
+                                  Width="70"/>      
                         </StackPanel>
                     </StackPanel>
                     <!-- Buttons -->
