--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -51,11 +51,17 @@
 
                     <!-- Input Fields -->
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <materialDesign:PackIcon Kind="Search" 
+                             VerticalAlignment="Center" 
+                             Margin="0,10,0,0" 
+                             Foreground="DarkBlue" 
+                             HorizontalAlignment="Right" Width="50"/>
                         <TextBox Text="{Binding TenCapDo}" 
                              Margin="5" 
                              VerticalAlignment="Center" 
                              materialDesign:HintAssist.Hint="Tên cấp hành chính" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                       
                     </StackPanel>
 
                     <!-- Buttons -->
