--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -208,7 +208,7 @@ Foreground="White" Command="{Binding PhanLoaiThuocBVTVCommand}"
 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                    <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="15">
+                                    <TextBlock Width="110" VerticalAlignment="Center" FontSize="15">
     Thuốc BVTV
                                     </TextBlock>
                                 </WrapPanel>
@@ -219,7 +219,7 @@ Foreground="White" Command="{Binding CosoThuocBVTVCommand}"
 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Shop" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                    <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="15">
+                                    <TextBlock Width="110" VerticalAlignment="Center" FontSize="15">
     Cơ Sở
                                     </TextBlock>
                                 </WrapPanel>
@@ -257,6 +257,44 @@ Width="190" Height="40" Margin="0 5 0 0" >
 
                         </Button>
 
+                        <!--nut tai khoan-->
+                        <Button Style="{StaticResource MaterialDesignFlatButton}"
+                            Foreground="White" 
+                            materialDesign:ButtonAssist.CornerRadius="6" 
+                            Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
+                            Margin="0 0 0 0" >
+                            <WrapPanel Width="190" >
+                                <materialDesign:PackIcon Kind="Account" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                <TextBlock Width="125" VerticalAlignment="Bottom"  FontSize="20" >
+                                Tài Khoản
+                                </TextBlock>
+                                <materialDesign:PackIcon Kind="ChevronDown" Height="25" Width="25" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+                            </WrapPanel>
+                        </Button>
+                        <StackPanel Name="TaiKhoanButton" Visibility="Collapsed">
+                            <!--nut con 1-->
+                            <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                Foreground="White"
+                                Width="190" Height="40" Margin="0 5 0 0" >
+                                <WrapPanel Width="190">
+                                    <materialDesign:PackIcon Kind="AccountEdit" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                    <TextBlock Width="110" VerticalAlignment="Center" FontSize="15" >
+                                        Đổi Thông Tin
+                                    </TextBlock>
+                                </WrapPanel>
+                            </Button>
+                            <!--nut con 2-->
+                            <Button Style="{StaticResource MaterialDesignFlatButton}"
+    Foreground="White"
+    Width="190" Height="40" Margin="0 5 0 0" >
+                                <WrapPanel Width="190">
+                                    <materialDesign:PackIcon Kind="LogoutVariant" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                    <TextBlock Width="110" VerticalAlignment="Center" FontSize="15">
+                                        Đăng Xuất
+                                    </TextBlock>
+                                </WrapPanel>
+                            </Button>
+                        </StackPanel>
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
 Foreground="White" 
 materialDesign:ButtonAssist.CornerRadius="6" 
@@ -273,14 +311,32 @@ Margin="0 0 0 0"   Click="HeThongButton_Click">
 
                         <StackPanel Name="HeThongButton" Visibility="Collapsed">
                             <!--nut con 1-->
-                            <Button Content="Quản Lý Người Dùng" Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="White" Command="{Binding QLNDCommand}"
-Width="190" Height="40" Margin="0 5 0 0" HorizontalContentAlignment="Left"/>
+                            <Button Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding QLNDCommand}"
+                                    Foreground="White"
+                                    Width="210" Height="40" Margin="0 5 0 0" >      
+                                <WrapPanel Width="190">
+                                    <materialDesign:PackIcon Kind="AccountDetails" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                    <TextBlock Width="140" VerticalAlignment="Center" FontSize="15">
+                                         Quản Lý Người Dùng
+                                    </TextBlock>
+                                </WrapPanel>
+                            </Button>
+
                             <!--nut con 2-->
-                            <Button Content="Lịch Sử Truy Cập" Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding LSTCCommand}"
-Foreground="White"
-Width="190" Height="40" Margin="0 5 0 0" HorizontalContentAlignment="Left"/>
+                            <Button Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding LSTCCommand}"
+        Foreground="White"
+        Width="210" Height="40" Margin="0 5 0 0" >
+                                <WrapPanel Width="190">
+                                    <materialDesign:PackIcon Kind="History" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
+                                    <TextBlock Width="140" VerticalAlignment="Center" FontSize="15">
+             Lịch Sử Truy Cập 
+                                    </TextBlock>
+                                </WrapPanel>
+                            </Button>
+
                         </StackPanel>
+
+
                     </StackPanel>
                 </ScrollViewer>
             </StackPanel>
