--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -244,7 +244,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                         </Button>
 
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="White" 
+    Foreground="White"  Command="{Binding BanDoCommand}"
     materialDesign:ButtonAssist.CornerRadius="6" 
     Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
     Margin="0 0 0 0" >
