--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -26,7 +26,7 @@
             <LineBreak />
             TỈNH BẮC NINH
         </TextBlock>
-        
+
         <Border CornerRadius="15" BorderThickness="2" 
                 HorizontalAlignment="Left" VerticalAlignment="Center" Height="263" Width="277" 
                 BorderBrush="Transparent" Grid.Column="1">
@@ -40,9 +40,9 @@
                 <TextBox
                     materialDesign:HintAssist.Hint="Tài Khoản" Text="{Binding Email}"
                     Padding="0"
-                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,78,0,0" Height="34" VerticalAlignment="Top" HorizontalAlignment="Center" Width="202" />
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="34,64,0,0" Height="34" VerticalAlignment="Top" HorizontalAlignment="Left" Width="202" />
                 <PasswordBox x:Name="FloatingPasswordBox" materialDesign:HintAssist.Hint="Mật Khẩu"
-                     Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0,126,0,0" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Width="202">
+                     Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="34,0,0,0" Height="35" VerticalAlignment="Center" HorizontalAlignment="Left" Width="202">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="PasswordChanged">
                             <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
@@ -71,6 +71,17 @@
                     Background="Transparent"
                     BorderBrush="Transparent"
                     Padding="0" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="59"/>
+                <Button
+                    Style="{StaticResource MaterialDesignRaisedAccentButton}"
+                    ToolTip="Resource name: MaterialDesignRaisedAccentButton"
+    
+                    materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,0,37,91" 
+                    Content="Quên mật khẩu ?" FontSize="12" Foreground="black"
+                    Command="{Binding SignUpCommand}"
+                    CommandParameter="{Binding ElementName=loginWindow}"
+                    Background="Transparent"
+                    BorderBrush="Transparent"
+                    Padding="0" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="100"/>
             </Grid>
         </Border>
     </Grid>
